[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/TX Props.png" type="Texture" id=1]
[ext_resource path="res://World/TX Shadow.png" type="Texture" id=2]
[ext_resource path="res://World/Column_1.gd" type="Script" id=3]
[ext_resource path="res://UI/PressA.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 163, 98, 31, 27 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 227, 9, 26, 52 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 270, 29, 5, 26 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.9955, 9.86817 )

[sub_resource type="CircleShape2D" id=5]
radius = 30.3487

[node name="Column_Tall" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
position = Vector2( 3.00057, -3.01469 )
texture = SubResource( 1 )

[node name="Column" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = SubResource( 2 )
region_rect = Rect2( 16, 16, 32, 32 )

[node name="Words" type="Sprite" parent="."]
visible = false
position = Vector2( 0.500572, -9.01017 )
texture = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="PressA" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 10 )
frame = 2
offset = Vector2( 0, -50 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
